--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/accountinglog
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/accountinglog27122021
 spring.datasource.username=root
 spring.datasource.password=admin1
 #spring.datasource.driver-class-name =com.mysql.jdbc.Driver
